# PolaCalibration_RAL_2022

./: README.md
Code/: CMakeLists.txt  README.md  main.cpp
Code/Inc/: CameraTypes.hpp
Code/Inc/LoadSaveExperiments/: LoadSaveExperiments.hpp
Code/Inc/PixelGainCalibration/: SourceOrientationEstimator.hpp  SuperPixelCalibration.hpp
Code/Inc/PolarimetricImagesProcessing/: PolarimetricImagesProcessing.hpp
Code/Src/LoadSaveExperiments/: LoadSaveExperiments.cpp
Code/Src/PixelGainCalibration/: SourceOrientationEstimator.cpp  SuperPixelCalibration.cpp
Code/Src/PolarimetricImagesProcessing/: PolarimetricImagesProcessing.cpp
Code/data/experiment_1/: camera_params.txt
Supplementary_documents/: README.md
Supplementary_images/: README.md
